[package]
name = "asyncapi-mqtt"
version = "0.1.0"
edition = "2024"
description = "Generate type-safe TypeScript MQTT clients from AsyncAPI"
license = "MIT"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
serde_yaml = "0.9.34"
thiserror = "2.0.9"
